# evebot

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yml  justfile  manage.py  pyproject.toml  start.sh
.github/workflows/: build.yml  lint.yml
alliance/: apps.py
combat/: apps.py
corporation/: apps.py
deploy/charts/evebot/: Chart.yaml  values.yaml
deploy/charts/evebot/templates/: NOTES.txt  _helpers.tpl  beat.yaml  deployment.yaml  flower.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  workers.yaml
deploy/charts/evebot/templates/tests/: test-connection.yaml
eve_interface/: apps.py
evebot/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
industry/: apps.py
scripts/: download-extract-sde.sh  import-fuzzwork.sh  scratch.py  start.sh
sde/: apps.py  models.py
sde/_management/commands/: importsde.py  sde_import.py
sde/management/commands/: sde_gen_models.py  sde_import.py
sde/migrations/: 0001_initial.py  0001_initial_sde_hoboleaks.py  0001_initial_sde_tables.py  0002_alter_invitem_location_id.py  0002_constellation_name.py  0002_initial_hoboleaks_tables.py  0003_alter_constellation_radius.py  0003_alter_invitem_item_id.py  0004_remove_invitem_flag_id_remove_invitem_item_id_and_more.py  0004_remove_solarsystem_solar_system_name_id.py  0005_alter_ancestry_short_description.py  0005_alter_solarsystem_star_id.py  0006_alter_dogmaattributecategory_description.py  0006_remove_solarsystem_solar_system_id.py  0007_alter_solarsystem_sun_type_id.py  0007_remove_dogmaattribute_attribute_id.py  0008_alter_dogmaattribute_description.py  0008_stargate_solarsystem_secondary_sun.py  0009_alter_dogmaeffect_guid_alter_dogmaeffect_sfx_name.py  0009_remove_moon_celestial_index.py  0010_alter_faction_flat_logo_and_more.py  0011_alter_graphicid_description_and_more.py  0012_alter_iconid_description_alter_metagroup_icon_suffix.py  0013_alter_npccorporation_url.py  0014_alter_npccorporationdivision_description.py  0015_alter_npccorporation_shares.py  0016_remove_station_station_id.py  0017_alter_skin_skin_description.py  0018_alter_type_sof_faction_name.py
sde/models/: __init__.py  accounting_entry_types.py  agent_types.py  agents.py  agents_in_space.py  ancestries.py  astroid_belts.py  bloodlines.py  blueprints.py  categories.py  certificates.py  character_attributes.py  clone_states.py  compressible_types.py  constellations.py  contraband_types.py  control_tower_resources.py  corporation_activities.py  debuffs.py  dogma_attribute_categories.py  dogma_attributes.py  dogma_effect_categories.py  dogma_effects.py  dogma_units.py  dynamic_item_attributes.py  expert_systems.py  factions.py  graphic_ids.py  groups.py  hoboleaks_status.py  icon_ids.py  industry_activities.py  industry_assembly_lines.py  industry_installation_type.py  industry_modifiers.py  industry_target_filters.py  inv_flags.py  inv_items.py  inv_names.py  inv_positions.py  (+36 more)
