[project]
name = "evebot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiopath>=0.7.7",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.3.0",
    "brotli>=1.1.0",
    "celery>=5.4.0",
    "colorlog>=6.9.0",
    "django>=5.1.6",
    "django-anymail>=12.0",
    "django-celery-beat>=2.7.0",
    "django-click>=2.4.1",
    "django-compressor>=4.5.1",
    "django-cotton>=1.6.0",
    "django-csp>=3.8",
    "django-dbbackup>=4.2.1",
    "django-debug-toolbar>=5.0.1",
    "django-environ>=0.12.0",
    "django-esi>=6.0.0",
    "django-health-check>=3.18.3",
    "django-model-utils>=5.0.0",
    "django-redis>=5.4.0",
    "django-structlog>=9.0.1",
    "environ>=1.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "hiredis>=3.1.0",
    "httpx[http2]>=0.28.1",
    "inflect>=7.5.0",
    "psutil>=7.0.0",
    "psycopg[binary,pool]>=3.2.5",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "sentry-sdk>=2.22.0",
    "tqdm>=4.67.1",
    "uvicorn-worker>=0.3.0",
    "uvicorn[standard]>=0.34.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "django-browser-reload>=1.18.0",
    "django-coverage-plugin>=3.1.0",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-fakery>=4.1.3",
    "django-stubs[compatible-mypy]>=5.1.3",
    "djlint>=1.36.4",
    "factory-boy>=3.3.3",
    "ipdb>=0.13.13",
    "mypy>=1.15.0",
    "pylint>=3.3.4",
    "pylint-django>=2.6.1",
    "pytest>=8.3.4",
    "pytest-django>=4.10.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.8",
    "watchfiles>=1.0.4",
    "werkzeug[watchdog]>=3.1.3",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "evebot.settings"


[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.ruff]
target-version = "py313"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
    "sde-workspace/*"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    'ISC',
    "ICN",
    "G",
    'INP',
    'PIE',
    "T20",
    'PYI',
    'PT',
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF",
]
ignore = [
    "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM102", # sometimes it's better to nest
    "UP038", # Checks for uses of isinstance/issubclass that take a tuple
    # of types for comparison.
    # Deactivated because it can make the code slow:
    # https://github.com/astral-sh/ruff/issues/7871
    "COM812",
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true
